modified:   app/Http/Controllers/AlquilerController.php 	modified:   app/Http/Controllers/Auth/RegisteredUserController.php 	modified:   app/Http/Controllers/AuthController.php 	modified:   app/Http/Controllers/CarritoController.php 	modified:   app/Http/Controllers/CategoriaController.php 	modified:   app/Http/Controllers/ClienteController.php 	modified:   app/Http/Controllers/PeliculaController.php 	modified:   app/Http/Controllers/TarifaController.php 	modified:   app/Http/Middleware/HandleInertiaRequests.php 	modified:   app/Models/Alquiler.php 	modified:   app/Models/Categoria.php 	modified:   app/Models/Cliente.php 	modified:   app/Models/Pelicula.php 	modified:   app/Models/Tarifa.php 	modified:   database/migrations/2024_11_27_075431_create_clientes_table.php 	modified:   database/migrations/2024_11_27_091649_create_peliculas_table.php 	modified:   database/migrations/2024_11_27_092453_create_alquileres_table.php 	modified:   public/css/login.css 	modified:   public/css/register.css 	modified:   public/css/style.css 	modified:   resources/js/Pages/Auth/Login.jsx 	modified:   resources/js/Pages/Auth/Register.jsx 	modified:   resources/js/Pages/Inicio.jsx 	modified:   resources/js/Pages/categorias/categoriasIndex.jsx 	modified:   resources/js/Pages/clientes/clientesIndex.jsx 	modified:   resources/js/Pages/interfazUsuario/misAlquileres.jsx 	modified:   resources/js/Pages/interfazUsuario/perfil.jsx 	modified:   resources/js/components/Carrito.jsx 	modified:   resources/js/components/Login.jsx 	modified:   resources/js/components/ModalAgregarAlquiler.jsx 	modified:   resources/js/components/ModalAgregarCategoria.jsx 	modified:   resources/js/components/ModalAgregarCliente.jsx 	modified:   resources/js/components/ModalAgregarPelicula.jsx 	modified:   resources/js/components/ModalAgregarTarifa.jsx 	modified:   resources/js/components/ModalEditarAlquiler.jsx 	modified:   resources/js/components/ModalEditarCliente.jsx 	modified:   resources/js/components/NavbarUsuar

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -38,7 +38,7 @@ label {
 .input-container input {
     width: 100%;
     padding: 10px;
-    padding-right: 40px; /* Espacio para el ícono */
+    padding-right: 40px; 
     border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
@@ -54,7 +54,7 @@ label {
 
 button {
     width: 100%;
-    padding: 12px; /* Aumenta el tamaño del botón */
+    padding: 12px;
     background-color: #D28B7A;
     border: none;
     border-radius: 5px;
