--- a/public/css/register.css
+++ b/public/css/register.css
@@ -4,7 +4,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    align-items: flex-start; /* Cambia center por flex-start */
+    align-items: flex-start;
     min-height: 100vh;     margin: 0;
 }
 .form-container {
@@ -13,7 +13,7 @@ body {
     padding: 30px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     width: 500px;
-    margin-top: 60px;   /* Añade margen arriba */
+    margin-top: 60px; 
     margin-bottom: 60px;
 }
 label {
@@ -28,7 +28,7 @@ label {
 .input-container input {
     width: 100%;
     padding: 10px;
-    padding-right: 40px; /* Espacio para el ícono */
+    padding-right: 40px; 
     border: 1px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
