--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,7 +32,7 @@ img {
   
 
 .container-welcome {
-    background-color: #FFF0F5; /* Color suave pastel */
+    background-color: #FFF0F5;
     border-radius: 20px;
     padding: 20px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -47,7 +47,7 @@ table {
 
 table td {
     vertical-align: middle; 
-    border: none; /* Removes border between cells */
+    border: none; 
 }
 
 table th, table td {
@@ -198,7 +198,6 @@ button {
 
 .search-input {
   width: 100%;
-  /* Elimina max-width y min-width aquí */
   margin: 0 auto;
 }
 
