--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,3 +1,10 @@
+@media (max-width: 600px) {
+  .form-container {
+    width: 100% !important;
+    max-width: 95vw;
+    padding: 16px;
+  }
+}
 body {
     background-color: #FADADD; 
     font-family: 'Poppins', sans-serif;
